--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 SimGrid (3.16) UNRELEASED
 
+ The Blooming Spring Release: developments are budding.
+
  Portability status:
   - FreeBSD: Disable SMPI mmap privatization, switch automatically to dlopen.
   - Mac, BSD: dlopen+thread broken, switch automatically to raw contexts.
@@ -70,7 +72,7 @@ SimGrid (3.16) UNRELEASED
   - DROPPED MODULE: matrix. We don't need it anymore.
   - DROPPED MODULE: lib. We don't need it anymore.
 
- -- Release target: June 21 2017   -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
+ -- Thu Jun 22 22:48:12 CEST 2017   -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
 SimGrid (3.15) stable; urgency=low
 
