--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ __   _____ _ __ ___(_) ___  _ __   |___ / / |/ /_
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | | '_ \
  \ V /  __/ |  \__ \ | (_) | | | |  ___) || | (_) |
   \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|\___/
-               (not released yet)
+               June 22 2017
 
 The Blooming Spring Release: developments are budding.
 
