--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ SimGrid (3.17) UNRELEASED (release target: September 22 2017)
  S4U
   - Comm.detach(): start and forget about asynchronous emission
   - this_actor::send(mailbox) is now mailbox->put()
+  - New: simgrid::s4u::Comm::wait_all()
 
  SURF
   - Unused option network/sender-gap is removed.
