Removed unused functions from xbt_str.
Functions: xbt_str_split_str(), xbt_str_subst(), xbt_str_ltrim(),
           xbt_str_rtrim(), xbt_str_trim().

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,9 @@ SimGrid (3.17) UNRELEASED (release target: September 22 2017)
  XBT
  - Bring back run-time option --cfg=exception/cutpath to remove exception
    backtraces.
+ - Removed unused functions:
+   - xbt/str.h: xbt_str_split_str(), xbt_str_subst(), xbt_str_ltrim(),
+       xbt_str_rtrim(), xbt_str_trim().
 
  Misc
  - Removed header files obsolete since SimGrid 3.12:
