prepare the files for the next release

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,9 @@ SimGrid (3.17) UNRELEASED (release target: September 22 2017)
  The Drained Leaks release: (almost) no known leaks despite the tests.
 
  Even very long simulations will preserve your memory: our testsuite
- stresses SimGrid for over 45mn on fast machines, and there is only
- one single known leak, of about 4kb.
+ stresses SimGrid for over 45mn on fast machines for a coverage of
+ over 80% of our codebase, and there is only one single known leak, of
+ about 4kb.
 
 
  S4U
