--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ __   _____ _ __ ___(_) ___  _ __   |___ / / |___  |
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | |  / /
  \ V /  __/ |  \__ \ | (_) | | | |  ___) || | / /
   \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|/_/
-               (unreleased yet)
+               October 8 2017
 
 The Drained Leaks release: (almost) no known leaks despite the tests.
 
