--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+SimGrid (3.18) NOT RELEASED YET (target: December 24 2017)
+
 SimGrid (3.17) Released October 8 2017
 
  The Drained Leaks release: (almost) no known leaks despite the tests.
