--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 SimGrid (3.18) NOT RELEASED YET (target: December 24 2017)
 
+ S4U
+ - Link::name() is deprecated and will be removed in v3.21, use instead
+   Link::getCname().
+ - Mailbox::getName() changed to return a std::string, use instead
+   Mailbox::getCname() to get a char*.
+ - Storage::getName() changed to return a std::string, use intead
+   Storage::getCname() to get a char*.
+
 SimGrid (3.17) Released October 8 2017
 
  The Drained Leaks release: (almost) no known leaks despite the tests.
